--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -11,6 +11,7 @@
             getPage: '@Url.RouteUrl("DefaultApi", new {controller = "Api", action = "page" })'
         }
     </script>
+    <link href="~/css/styles.css" rel="stylesheet" media="all">
     <title>Index</title>
 </head>
 <body>
