css+select applicants
css+select applicants

--- a/wwwroot/css/styles.css
+++ b/wwwroot/css/styles.css
@@ -19,3 +19,18 @@
 .container-fluid{
     padding: 0 0 0 0;
 }
+.soup {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.user_search_card {
+    margin-bottom: 8px;
+    padding: 8px;
+    background-color: whitesmoke;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.user_search_card:hover {
+    cursor: pointer;
+    border-style: solid;
+    border-width: 1.5px;
+    border-color: #4abfb4;
+}
